# manipulator-control

./: .gitignore  README.md
control_loop_demo/: CMakeLists.txt
control_loop_demo/examples/: main.cpp
control_loop_demo/include/: robot_state.hpp  safety_limiter.hpp  trajectory_buffer.hpp
control_loop_demo/src/: cubic_interpolator.cpp  robot_state.cpp  safety_limiter.cpp  trajectory_buffer.cpp
cpp_test/: main  main.cpp
cubic_interpolator/: CMakeLists.txt
cubic_interpolator/examples/: main.cpp
cubic_interpolator/include/: cubic_interpolator.hpp
cubic_interpolator/src/: cubic_interpolator.cpp
jacobian_solver/: CMakeLists.txt
jacobian_solver/include/: jacobian_solver.hpp
jacobian_solver/src/: jacobian_solver.cpp
robot_control_cpp/: CMakeLists.txt
robot_control_cpp/examples/: main.cpp
robot_control_cpp/include/: robot_state.hpp
robot_control_cpp/src/: robot_state.cpp
robot_control_ros2/install/: local_setup.sh  setup.sh
robot_control_ros2/install/other_package/lib/other_package/: self_msg_test_publisher
robot_control_ros2/install/other_package/share/other_package/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_control_ros2/install/other_package/share/other_package/cmake/: other_packageConfig.cmake
robot_control_ros2/install/robot_control_ros2/include/robot_control_ros2/robot_control_ros2/msg/: joint_position_cmd.h  joint_position_cmd.hpp  joint_velocity_cmd.h  joint_velocity_cmd.hpp  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
robot_control_ros2/install/robot_control_ros2/include/robot_control_ros2/robot_control_ros2/msg/detail/: joint_position_cmd__builder.hpp  joint_position_cmd__description.c  (+26 more)
robot_control_ros2/install/robot_control_ros2/include/robot_control_ros2/robot_control_ros2/srv/: student.h  student.hpp
robot_control_ros2/install/robot_control_ros2/lib/robot_control_ros2/: joint_velocity_publisher  robot_state_pub  student_client  student_servier  timer_control_node
robot_control_ros2/install/robot_control_ros2/share/ament_index/resource_index/parent_prefix_path/: robot_control_ros2
robot_control_ros2/install/robot_control_ros2/share/robot_control_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
robot_control_ros2/install/robot_control_ros2/share/robot_control_ros2/cmake/: export_robot_control_ros2__rosidl_generator_cExport-noconfig.cmake  export_robot_control_ros2__rosidl_generator_pyExport-noconfig.cmake  export_robot_control_ros2__rosidl_generator_pyExport.cmake  export_robot_control_ros2__rosidl_typesupport_fastrtps_cExport.cmake  export_robot_control_ros2__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_robot_control_ros2__rosidl_typesupport_fastrtps_cppExport.cmake  robot_control_ros2__rosidl_typesupport_cExport-noconfig.cmake  robot_control_ros2__rosidl_typesupport_cppExport-noconfig.cmake  robot_control_ros2__rosidl_typesupport_introspection_cExport-noconfig.cmake  rosidl_cmake-extras.cmake
robot_control_ros2/install/robot_control_ros2/share/robot_control_ros2/msg/: JointPositionCmd.msg  JointStateCommand.json  JointVelocityCmd.idl  JointVelocityCmd.json
robot_control_ros2/install/robot_control_ros2/share/robot_control_ros2/srv/: Student.json  Student.srv
robot_control_ros2/log/: latest_build
robot_control_ros2/src/other_package/: CMakeLists.txt  package.xml
robot_control_ros2/src/other_package/src/: lib_test.cpp  self_msg_test_publisher.cpp  self_msg_test_subscriber.cpp
robot_control_ros2/src/robot_control/: CMakeLists.txt  package.xml
robot_control_ros2/src/robot_control/examples/: control_loop_demo.cpp  cubic_interpolator_test.cpp  jacobian_solver_test.cpp  robot_state_test.cpp  safety_limiter_test.cpp  trajectory_buffer_test.cpp
robot_control_ros2/src/robot_control/include/: cubic_interpolator.hpp  robot_state.hpp  safety_limiter.hpp  trajectory_buffer.hpp
robot_control_ros2/src/robot_control/src/: cubic_interpolator.cpp  robot_state.cpp  safety_limiter.cpp  trajectory_buffer.cpp
robot_control_ros2/src/robot_control_ros2/: CMakeLists.txt  package.xml
robot_control_ros2/src/robot_control_ros2/config/: vel_to_pos.yaml
robot_control_ros2/src/robot_control_ros2/include/robot_utils/: cubic_interpolator.hpp  robot_state.hpp  safety_limiter.hpp  trajectory_buffer.hpp
robot_control_ros2/src/robot_control_ros2/launch/: tf_broadcaster.launch.py  vel_to_pos_node.launch.py
robot_control_ros2/src/robot_control_ros2/src/: joint_velocity_subscriber.cpp  robot_state_pub.cpp  robot_velocity_pub.cpp  timer_control_node.cpp  vel_to_pos_node.cpp
robot_control_ros2/src/robot_control_ros2/src/examples/: cubic_interpolator_test.cpp
robot_control_ros2/src/robot_control_ros2/src/robot_utils/: cubic_interpolator.cpp  robot_state.cpp  safety_limiter.cpp  trajectory_buffer.cpp
robot_control_ros2/src/robot_control_ros2/src/service/: student_client.cpp  student_servier.cpp
robot_control_ros2/src/robot_control_ros2/src/tf/: tf_dynamic_broadcaster.cpp  tf_point_listener.cpp  tf_point_publisher.cpp  tf_static_broadcaster.cpp  tf_transform_listener.cpp
robot_control_ros2/src/robot_control_ros2/src/topic/: joint_velocity_publisher.cpp
robot_control_ros2/src/simple_arm_description/: CMakeLists.txt  package.xml
robot_control_ros2/src/simple_arm_description/config/: simple_2dof_arm_rviz.rviz
robot_control_ros2/src/simple_arm_description/launch/: simple_2dof_arm_display.launch.py
robot_control_ros2/src/simple_arm_description/urdf/: simple_2dof_arm.urdf.xacro
safetyLimiter/: CMakeLists.txt
safetyLimiter/examples/: main.cpp
safetyLimiter/include/: safetyLimiter.hpp
safetyLimiter/src/: safetyLimiter.cpp
trajectory_buffer/: CMakeLists.txt
trajectory_buffer/examples/: main.cpp
trajectory_buffer/include/: trajectory_buffer.hpp
trajectory_buffer/src/: trajectory_buffer.cpp
(+6 files in other folders)
